# LDiskpart

./: CMakeLists.txt  README.md  active.c  add.c  assign.c  attach.c  attributes.c  automount.c  break.c  clean.c  compact.c  convert.c  create.c  delete.c  detach.c  detail.c  diskpart.c  diskpart.h  diskpart.rc  dump.c  expand.c  extend.c  filesystems.c  format.c  gpt.c  help.c  import.c  inactive.c  interpreter.c  list.c  merge.c  misc.c  offline.c  online.c  partlist.c  recover.c  remove.c  repair.c  rescan.c  retain.c  (+5 more)
base/system/diskpart/: clean.c
